--- a/KnockAndCheckHF/Views/Survey/DSSI.cshtml
+++ b/KnockAndCheckHF/Views/Survey/DSSI.cshtml
@@ -6,98 +6,89 @@
 <h2>DSSI</h2>
 
 <form action="/Survey/SaveDSSIForm" method="post">
-    <div class="form-group">
-        <label>Patient ID:</label>
-        <select name="PatientID" class="form-control">
-            <option value="null" selected></option>
-            @foreach (var id in ViewBag.Patients)
-            {
-                <option value="@id">@id</option>
-            }
-        </select>
-    </div>
+    <input type="text" name="PatientID" value="@ViewBag.PatientID" hidden />
     <div class="form-group">
         <label>Date of survey:</label>
         <input type="text" class="form-control" name="DateOfVisit" placeholder="MM/DD/YYYY" pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}" title="Invalid date" />
     </div>
-    <br /><h3>Questions:</h3><br />
+    <h3>Questions:</h3><br />
     <div class="form-group">
-        <label>@ViewBag.Form.Q1</label><br />
-        <input type="radio" name="A1" value="None" /> None<br />
-        <input type="radio" name="A1" value="1-2 People" /> 1-2 People<br />
-        <input type="radio" name="A1" value="More than 2 people" /> More than 2 people<br />
+        <label>1. @ViewBag.Form.Q1</label><br />
+        <input type="radio" name="A1" value="None (1)" /> None (1)<br />
+        <input type="radio" name="A1" value="1-2 People (2)" /> 1-2 People (2)<br />
+        <input type="radio" name="A1" value="More than 2 people (3)" /> More than 2 people (3)<br />
     </div><br />
     <div class="form-group">
-        <label>@ViewBag.Form.Q2</label><br />
-        <input type="radio" name="A2" value="Once" /> Once<br />
-        <input type="radio" name="A2" value="Twice" /> Twice<br />
-        <input type="radio" name="A2" value="Three times" /> Three times<br />
-        <input type="radio" name="A2" value="Four times" /> Four times<br />
-        <input type="radio" name="A2" value="Five times" /> Five times<br />
-        <input type="radio" name="A2" value="Six times" /> Six times<br />
-        <input type="radio" name="A2" value="Seven or more times" /> Seven or more times<br />
+        <label>2. @ViewBag.Form.Q2</label><br />
+        <input type="radio" name="A2" value="Once (1)" /> Once (1)<br />
+        <input type="radio" name="A2" value="Twice (2)" /> Twice (2)<br />
+        <input type="radio" name="A2" value="Three times (3)" /> Three times (3)<br />
+        <input type="radio" name="A2" value="Four times (4)" /> Four times (4)<br />
+        <input type="radio" name="A2" value="Five times (5)" /> Five times (5)<br />
+        <input type="radio" name="A2" value="Six times (6)" /> Six times (6)<br />
+        <input type="radio" name="A2" value="Seven or more times (7)" /> Seven or more times (7)<br />
     </div><br />
     <div class="form-group">
-        <label>@ViewBag.Form.Q3</label><br />
-        <input type="radio" name="A3" value="Once" /> Once<br />
-        <input type="radio" name="A3" value="Twice" /> Twice<br />
-        <input type="radio" name="A3" value="Three times" /> Three times<br />
-        <input type="radio" name="A3" value="Four times" /> Four times<br />
-        <input type="radio" name="A3" value="Five times" /> Five times<br />
-        <input type="radio" name="A3" value="Six times" /> Six times<br />
-        <input type="radio" name="A3" value="Seven or more times" /> Seven or more times<br />
+        <label>3. @ViewBag.Form.Q3</label><br />
+        <input type="radio" name="A3" value="Once (1)" /> Once (1)<br />
+        <input type="radio" name="A3" value="Twice (2)" /> Twice (2)<br />
+        <input type="radio" name="A3" value="Three times (3)" /> Three times (3)<br />
+        <input type="radio" name="A3" value="Four times (4)" /> Four times (4)<br />
+        <input type="radio" name="A3" value="Five times (5)" /> Five times (5)<br />
+        <input type="radio" name="A3" value="Six times (6)" /> Six times (6)<br />
+        <input type="radio" name="A3" value="Seven or more times (7)" /> Seven or more times (7)<br />
     </div><br />
     <div class="form-group">
-        <label>@ViewBag.Form.Q4</label><br />
-        <input type="radio" name="A4" value="Once" /> Once<br />
-        <input type="radio" name="A4" value="Twice" /> Twice<br />
-        <input type="radio" name="A4" value="Three times" /> Three times<br />
-        <input type="radio" name="A4" value="Four times" /> Four times<br />
-        <input type="radio" name="A4" value="Five times" /> Five times<br />
-        <input type="radio" name="A4" value="Six times" /> Six times<br />
-        <input type="radio" name="A4" value="Seven or more times" /> Seven or more times<br />
+        <label>4. @ViewBag.Form.Q4</label><br />
+        <input type="radio" name="A4" value="Once (1)" /> Once (1)<br />
+        <input type="radio" name="A4" value="Twice (2)" /> Twice (2)<br />
+        <input type="radio" name="A4" value="Three times (3)" /> Three times (3)<br />
+        <input type="radio" name="A4" value="Four times (4)" /> Four times (4)<br />
+        <input type="radio" name="A4" value="Five times (5)" /> Five times (5)<br />
+        <input type="radio" name="A4" value="Six times (6)" /> Six times (6)<br />
+        <input type="radio" name="A4" value="Seven or more times (7)" /> Seven or more times (7)<br />
     </div><br />
     <div class="form-group">
-        <label>@ViewBag.Form.Q5</label><br />
-        <input type="radio" name="A5" value="Hardly ever" /> Hardly ever<br />
-        <input type="radio" name="A5" value="Some of the time" /> Some of the time<br />
-        <input type="radio" name="A5" value="Most of the time" /> Most of the time<br />
+        <label>5. @ViewBag.Form.Q5</label><br />
+        <input type="radio" name="A5" value="Hardly ever (1)" /> Hardly ever (1)<br />
+        <input type="radio" name="A5" value="Some of the time (2)" /> Some of the time (2)<br />
+        <input type="radio" name="A5" value="Most of the time (3)" /> Most of the time (3)<br />
     </div><br />
     <div class="form-group">
-        <label>@ViewBag.Form.Q6</label><br />
-        <input type="radio" name="A6" value="Hardly ever" /> Hardly ever<br />
-        <input type="radio" name="A6" value="Some of the time" /> Some of the time<br />
-        <input type="radio" name="A6" value="Most of the time" /> Most of the time<br />
+        <label>6. @ViewBag.Form.Q6</label><br />
+        <input type="radio" name="A6" value="Hardly ever (1)" /> Hardly ever (1)<br />
+        <input type="radio" name="A6" value="Some of the time (2)" /> Some of the time (2)<br />
+        <input type="radio" name="A6" value="Most of the time (3)" /> Most of the time (3)<br />
     </div><br />
     <div class="form-group">
-        <label>@ViewBag.Form.Q7</label><br />
-        <input type="radio" name="A7" value="Hardly ever" /> Hardly ever<br />
-        <input type="radio" name="A7" value="Some of the time" /> Some of the time<br />
-        <input type="radio" name="A7" value="Most of the time" /> Most of the time<br />
+        <label>7. @ViewBag.Form.Q7</label><br />
+        <input type="radio" name="A7" value="Hardly ever (1)" /> Hardly ever (1)<br />
+        <input type="radio" name="A7" value="Some of the time (2)" /> Some of the time (2)<br />
+        <input type="radio" name="A7" value="Most of the time (3)" /> Most of the time (3)<br />
     </div><br />
     <div class="form-group">
-        <label>@ViewBag.Form.Q8</label><br />
-        <input type="radio" name="A8" value="Hardly ever" /> Hardly ever<br />
-        <input type="radio" name="A8" value="Some of the time" /> Some of the time<br />
-        <input type="radio" name="A8" value="Most of the time" /> Most of the time<br />
+        <label>8. @ViewBag.Form.Q8</label><br />
+        <input type="radio" name="A8" value="Hardly ever (1)" /> Hardly ever (1)<br />
+        <input type="radio" name="A8" value="Some of the time (2)" /> Some of the time (2)<br />
+        <input type="radio" name="A8" value="Most of the time (3)" /> Most of the time (3)<br />
     </div><br />
     <div class="form-group">
-        <label>@ViewBag.Form.Q9</label><br />
-        <input type="radio" name="A9" value="Hardly ever" /> Hardly ever<br />
-        <input type="radio" name="A9" value="Some of the time" /> Some of the time<br />
-        <input type="radio" name="A9" value="Most of the time" /> Most of the time<br />
+        <label>9. @ViewBag.Form.Q9</label><br />
+        <input type="radio" name="A9" value="Hardly ever (1)" /> Hardly ever (1)<br />
+        <input type="radio" name="A9" value="Some of the time (2)" /> Some of the time (2)<br />
+        <input type="radio" name="A9" value="Most of the time (3)" /> Most of the time (3)<br />
     </div><br />
     <div class="form-group">
-        <label>@ViewBag.Form.Q10</label><br />
-        <input type="radio" name="A10" value="Hardly ever" /> Hardly ever<br />
-        <input type="radio" name="A10" value="Some of the time" /> Some of the time<br />
-        <input type="radio" name="A10" value="Most of the time" /> Most of the time<br />
+        <label>10. @ViewBag.Form.Q10</label><br />
+        <input type="radio" name="A10" value="Hardly ever (1)" /> Hardly ever (1)<br />
+        <input type="radio" name="A10" value="Some of the time (2)" /> Some of the time (2)<br />
+        <input type="radio" name="A10" value="Most of the time (3)" /> Most of the time (3)<br />
     </div><br />
     <div class="form-group">
-        <label>@ViewBag.Form.Q11</label><br />
-        <input type="radio" name="A11" value="Very dissatisfied" /> Very dissatisfied<br />
-        <input type="radio" name="A11" value="Somewhat dissatisfied" /> Somewhat dissatisfied<br />
-        <input type="radio" name="A11" value="Satisfied" /> Satisfied<br />
+        <label>11. @ViewBag.Form.Q11</label><br />
+        <input type="radio" name="A11" value="Very dissatisfied (1)" /> Very dissatisfied (1)<br />
+        <input type="radio" name="A11" value="Somewhat dissatisfied (2)" /> Somewhat dissatisfied (2)<br />
+        <input type="radio" name="A11" value="Satisfied (3)" /> Satisfied (3)<br />
     </div><br />
     <button type="submit" id="submit" class="btn btn-primary">Submit</button>
 </form>
