--- a/KnockAndCheckHF/Views/Survey/ViewSurvey.cshtml
+++ b/KnockAndCheckHF/Views/Survey/ViewSurvey.cshtml
@@ -3,33 +3,35 @@
     ViewBag.Title = "ViewSurvey";
 }
 
-<h2>@ViewBag.Form.FormID</h2>
-<h3>Patient ID: @ViewBag.Checkup.PatientID</h3>
+<h3>From ID: @ViewBag.Form.FormID</h3>
+<h3>Patient: @ViewBag.Patient.FirstName @ViewBag.Patient.LastName </h3>
 <h3>Care Giver ID: @ViewBag.UserName</h3>
 
-<h5>@ViewBag.Form.Q1</h5>
+<br /><h3>Total Score: @ViewBag.Checkup.TotalScore</h3><br />
+
+<h4>1. @ViewBag.Form.Q1</h4>
 <h5>@ViewBag.Checkup.A1</h5>
-<h5>@ViewBag.Form.Q2</h5>
+<h4>2. @ViewBag.Form.Q2</h4>
 <h5>@ViewBag.Checkup.A2</h5>
-<h5>@ViewBag.Form.Q3</h5>
+<h4>3. @ViewBag.Form.Q3</h4>
 <h5>@ViewBag.Checkup.A3</h5>
-<h5>@ViewBag.Form.Q4</h5>
+<h4>4. @ViewBag.Form.Q4</h4>
 <h5>@ViewBag.Checkup.A4</h5>
-<h5>@ViewBag.Form.Q5</h5>
+<h4>5. @ViewBag.Form.Q5</h4>
 <h5>@ViewBag.Checkup.A5</h5>
 @if (ViewBag.Form.FormID == "DSSI")
 {
-    <h5>@ViewBag.Form.Q6</h5>
+    <h4>6. @ViewBag.Form.Q6</h4>
     <h5>@ViewBag.Checkup.A6</h5>
-    <h5>@ViewBag.Form.Q7</h5>
+    <h4>7. @ViewBag.Form.Q7</h4>
     <h5>@ViewBag.Checkup.A7</h5>
-    <h5>@ViewBag.Form.Q8</h5>
+    <h4>8. @ViewBag.Form.Q8</h4>
     <h5>@ViewBag.Checkup.A8</h5>
-    <h5>@ViewBag.Form.Q9</h5>
+    <h4>9. @ViewBag.Form.Q9</h4>
     <h5>@ViewBag.Checkup.A9</h5>
-    <h5>@ViewBag.Form.Q10</h5>
+    <h4>10. @ViewBag.Form.Q10</h4>
     <h5>@ViewBag.Checkup.A10</h5>
-    <h5>@ViewBag.Form.Q11</h5>
+    <h4>11. @ViewBag.Form.Q11</h4>
     <h5>@ViewBag.Checkup.A11</h5>
 }
 
